--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "author": "Jerry Lee",
   "license": "MIT",
   "dependencies": {
+    "koa-static": "^4.0.2",
     "log4js": "^2.4.1",
     "node-nfcpy-id": "^0.1.1",
+    "openurl": "^1.1.1",
     "r2": "^2.0.0",
+    "socket.io": "^2.0.4",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
