--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "dependencies": {
     "aport": "^2.0.0",
     "koa": "^2.4.1",
-    "koa-router": "^7.3.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "log4js": "^2.4.1",
+    "node-cron": "^1.2.1",
     "node-nfcpy-id": "^0.1.1",
     "openurl": "^1.1.1",
     "r2": "^2.0.0",
