--- a/conf.yml
+++ b/conf.yml
@@ -1,7 +1,6 @@
 # conf.yml
-# host: https://felica-punch-server.herokuapp.com
-host: http://192.168.3.66:3030
-# port: 443
+device_uid: YOUR-CARD-ID
+host: https://YOUR_APP_NAME.herokuapp.com/
 urls: 
   punch: /socket/punch
   heart_beat: /socket/heart_beat
